--- a/app/src/main/res/layout/activity_a.xml
+++ b/app/src/main/res/layout/activity_a.xml
@@ -33,5 +33,12 @@
         android:text="bind跳转ServiceA"
         app:layout_constraintTop_toBottomOf="@id/btn_service_a1" />
 
+    <Button
+        android:id="@+id/btn_service_remote"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="AIDL启动"
+        app:layout_constraintTop_toBottomOf="@id/btn_service_a2" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
