--- a/app/src/main/res/layout/activity_layout_transition.xml
+++ b/app/src/main/res/layout/activity_layout_transition.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".component.activity.animator.LayoutTransitionActivity">
 
     <RelativeLayout
         android:animateLayoutChanges="true"
