--- a/app/src/main/res/layout/adpter_coordinator.xml
+++ b/app/src/main/res/layout/adpter_coordinator.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:textColor="@color/black"
+        android:textColor="#ff000000"
         android:textSize="18sp" />
 
 </RelativeLayout>
