--- a/app/src/main/res/layout/activity_leakcanary.xml
+++ b/app/src/main/res/layout/activity_leakcanary.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".component.activity.LeakCanaryActivity">
+    tools:context=".component.activity.performance.LeakCanaryActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
