--- a/app/src/main/res/layout/activity_recycle_view.xml
+++ b/app/src/main/res/layout/activity_recycle_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".component.activity.RecycleViewActivity">
+    tools:context=".component.activity.weight.RecycleViewActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv"
