--- a/app/src/main/res/layout/activity_livedata.xml
+++ b/app/src/main/res/layout/activity_livedata.xml
@@ -9,6 +9,7 @@
         android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
