--- a/app/src/main/res/layout/activity_vm.xml
+++ b/app/src/main/res/layout/activity_vm.xml
@@ -11,7 +11,7 @@
         android:layout_height="400dp"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/mb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
