--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="color008577">#008577</color>
+    <color name="color00574B">#00574B</color>
+    <color name="colorD81B60">#D81B60</color>
+    <color name="color3F51B5">#3F51B5</color>
 </resources>
