--- a/app/src/main/res/layout/activity_a.xml
+++ b/app/src/main/res/layout/activity_a.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".component.activity.ActivityA">
+    tools:context=".component.activity.ServiceDemoActivity">
 
     <Button
         android:id="@+id/btn_activity_a1"
