databinding的例子修改包名和类名

--- a/app/src/main/res/layout/activity_databinding.xml
+++ b/app/src/main/res/layout/activity_databinding.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="vm"
-            type="com.zkp.breath.designpattern.mvvm.ViewModel" />
+            type="com.zkp.breath.jetpack.databinding.DataBindingViewModel" />
 
     </data>
 
