--- a/app/src/main/res/layout/activity_databinding.xml
+++ b/app/src/main/res/layout/activity_databinding.xml
@@ -17,12 +17,14 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tv"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:gravity="center"
             android:text="@{vm.num,default=my_default}" />
 
         <Button
+            android:id="@+id/btn"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:onClick="@{vm::onClickAdd}"
