--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="color00574B">#00574B</color>
     <color name="colorD81B60">#D81B60</color>
     <color name="color3F51B5">#3F51B5</color>
+    <color name="colorFFFFFF">#FFFFFF</color>
+    <color name="color000000">#000000</color>
 </resources>
