--- a/app/src/main/res/xml/activity_motion_scene.xml
+++ b/app/src/main/res/xml/activity_motion_scene.xml
@@ -5,7 +5,7 @@
 
     <ConstraintSet android:id="@+id/start">
         <Constraint
-            android:id="@+id/vStartStatus"
+            android:id="@id/vStartStatus"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginTop="50dp"
@@ -24,15 +24,15 @@
             android:layout_marginBottom="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent">
-        </Constraint>
+            app:layout_constraintRight_toRightOf="parent" />
     </ConstraintSet>
 
     <Transition
         app:constraintSetEnd="@id/end"
-        app:constraintSetStart="@+id/start">
+        app:constraintSetStart="@id/start">
         <OnClick
             app:clickAction="toggle"
             app:targetId="@id/vStartStatus" />
     </Transition>
+
 </MotionScene>
