--- a/app/src/main/res/layout/activity_motion.xml
+++ b/app/src/main/res/layout/activity_motion.xml
@@ -8,10 +8,22 @@
     app:layoutDescription="@xml/activity_motion_scene"
     app:showPaths="true">
 
+    <!--
+     showPaths：可以看到运动轨迹
+     layoutDescription：指向一个xml动画文件，必写的属性，不然会报错
+    -->
+
     <View
-        android:id="@+id/vStartStatus"
+        android:id="@+id/view1"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@color/color000000" />
+
+    <View
+        android:id="@+id/view2"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@color/color3F51B5" />
+
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
