--- a/app/src/main/res/xml/activity_motion_scene.xml
+++ b/app/src/main/res/xml/activity_motion_scene.xml
@@ -3,36 +3,62 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:defaultDuration="500">
 
+
+    <!-- 开始动画 -->
     <ConstraintSet android:id="@+id/start">
+        <!--执行动画的控件，id一定要写，要和布局中的id一致；宽高也要写，不然没效果-->
         <Constraint
-            android:id="@id/vStartStatus"
+            android:id="@id/view1"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginTop="50dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent" />
 
-        </Constraint>
     </ConstraintSet>
 
+    <!-- 结束动画 -->
     <ConstraintSet android:id="@+id/end">
+        <!--执行动画的控件，id一定要写，要和布局中的id一致；宽高也要写，不然没效果-->
         <Constraint
-            android:id="@id/vStartStatus"
+            android:id="@id/view1"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginBottom="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
+
     </ConstraintSet>
 
+    <!--
+    Transition表示一个动画，常用属性：
+
+    constraintSetStart:指定动画初始状态；
+    constraintSetEnd:指定动画结束状态；
+    duration:指定动画时长；
+    autoTransiton:是否自动开启动画。取值有：animateToStart过渡到初始状态、animateToEnd过渡到结束状态、
+                jumpToEnd跳到结束状态、jumpToStart跳到初始状态、none不开始状态。默认情况下是none,当设为其他值时，
+                不用和用户交互即自动开启动画。
+    motionInterpolator:插值器。取值有：linear线性、bounce弹簧、easeIn淡入、easeOut淡出、easeInOut淡入淡出;
+    transitionDisable：允许动画功能。取值：false和true；
+    layoutDuringTransition:动画过程中，MotionLayout子View调用reqeustLayout，是否做出响应。
+                            取值honorRequest响应、ignoreRequest忽略；(beta 4)
+    -->
     <Transition
         app:constraintSetEnd="@id/end"
-        app:constraintSetStart="@id/start">
+        app:constraintSetStart="@id/start"
+        app:duration="1000"
+        app:motionInterpolator="linear">
+
+        <!--
+        targetId:指定要动画
+        -->
         <OnClick
             app:clickAction="toggle"
-            app:targetId="@id/vStartStatus" />
+            app:targetId="@id/view1" />
+
     </Transition>
 
 </MotionScene>
