--- a/app/src/main/res/xml/activity_motion_scene.xml
+++ b/app/src/main/res/xml/activity_motion_scene.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:defaultDuration="500">
 
-
     <!-- 开始动画 -->
     <ConstraintSet android:id="@+id/start">
         <!--执行动画的控件，id一定要写，要和布局中的id一致；宽高也要写，不然没效果-->
@@ -16,6 +15,13 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <Constraint
+            android:id="@id/view2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="50dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </ConstraintSet>
 
     <!-- 结束动画 -->
@@ -30,7 +36,15 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
 
+        <Constraint
+            android:id="@id/view2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="50dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
     </ConstraintSet>
+
 
     <!--
     Transition表示一个动画，常用属性：
@@ -38,7 +52,7 @@
     constraintSetStart:指定动画初始状态；
     constraintSetEnd:指定动画结束状态；
     duration:指定动画时长；
-    autoTransiton:是否自动开启动画。取值有：animateToStart过渡到初始状态、animateToEnd过渡到结束状态、
+    autoTransition:是否自动开启动画。取值有：animateToStart过渡到初始状态、animateToEnd过渡到结束状态、
                 jumpToEnd跳到结束状态、jumpToStart跳到初始状态、none不开始状态。默认情况下是none,当设为其他值时，
                 不用和用户交互即自动开启动画。
     motionInterpolator:插值器。取值有：linear线性、bounce弹簧、easeIn淡入、easeOut淡出、easeInOut淡入淡出;
@@ -53,11 +67,33 @@
         app:motionInterpolator="linear">
 
         <!--
-        targetId:指定要动画
+        targetId:指定点击触发动画的控件
+        clickAction：响应用户的操作。toggle：初始和结束状态循环切换；transitionToStart:过渡到开始状态；
+                    transitionToEnd:过渡到结束状态；jumpToStart:直接跳到开始状态；jumpToEnd: 直接跳到结束状态。
+                    其实这里和Transition标签的autoTransition属性类似。只是前者是手动触发，后者是自动触发
         -->
         <OnClick
             app:clickAction="toggle"
             app:targetId="@id/view1" />
+
+        <!-- 关键帧：KeyFrameSet标签：用来指定"某个中间状态"的位置和属性。其实和过渡动画的关键帧是一样的概念。
+        KeyFrameSet标签含有KeyPosition和KeyAttribute两个子标签，这些共同构成过渡动画过程中某特殊状态的位置和属性。
+         -->
+        <KeyFrameSet>
+            <KeyPosition
+                app:framePosition="25"
+                app:keyPositionType="parentRelative"
+                app:motionTarget="@id/view1"
+                app:percentX="0.25"
+                app:percentY="0.25" />
+
+            <KeyPosition
+                app:framePosition="75"
+                app:keyPositionType="parentRelative"
+                app:motionTarget="@id/view1"
+                app:percentX="0.75"
+                app:percentY="0.75" />
+        </KeyFrameSet>
 
     </Transition>
 
