--- a/app/src/main/res/xml/activity_motion_scene.xml
+++ b/app/src/main/res/xml/activity_motion_scene.xml
@@ -78,6 +78,15 @@
 
         <!-- 关键帧：KeyFrameSet标签：用来指定"某个中间状态"的位置和属性。其实和过渡动画的关键帧是一样的概念。
         KeyFrameSet标签含有KeyPosition和KeyAttribute两个子标签，这些共同构成过渡动画过程中某特殊状态的位置和属性。
+
+        KeyPosition位置关键帧标签的属性：
+        framePosition：当前关键帧的位置，把整个运动动画分成100个位置，取值0到99，那么初始状态的位置就是0，结束状态就是99。
+        keyPositionType:参考坐标系的选择，决定了percentX和percentY属性取值的结果。
+                        1.parentRelative：坐标系基于motionTarget指向的控件的父视图。（demo里面的父视图是全局，所以坐标系原点在屏幕的左上角）；
+                        2.deltaRelative：坐标系选择参照整个过渡动画的位置，那么起始状态的位置就是原点（0,0），结束状态的位置就是终点（1,1）（
+                        但是以我们demo为例子，结束状态的x轴没有发生偏移，所以以这种模式去设置percentX是没有效果的）；
+                        3.pathRelative:坐标系选择参照整个运动路径，即起始和终点的直线距离构成X轴，此时y轴就有正负之分，表示在X轴的左边还是右边。x轴和y轴的长度都是等于路径的长度。
+
          -->
         <KeyFrameSet>
             <KeyPosition
