--- a/app/src/main/res/xml/activity_motion_scene.xml
+++ b/app/src/main/res/xml/activity_motion_scene.xml
@@ -38,8 +38,9 @@
 
         <Constraint
             android:id="@id/view2"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginBottom="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent" />
@@ -63,7 +64,7 @@
     <Transition
         app:constraintSetEnd="@id/end"
         app:constraintSetStart="@id/start"
-        app:duration="1000"
+        app:duration="5000"
         app:motionInterpolator="linear">
 
         <!--
@@ -82,11 +83,17 @@
         KeyPosition位置关键帧标签的属性：
         framePosition：当前关键帧的位置，把整个运动动画分成100个位置，取值0到99，那么初始状态的位置就是0，结束状态就是99。
         keyPositionType:参考坐标系的选择，决定了percentX和percentY属性取值的结果。
-                        1.parentRelative：坐标系基于motionTarget指向的控件的父视图。（demo里面的父视图是全局，所以坐标系原点在屏幕的左上角）；
-                        2.deltaRelative：坐标系选择参照整个过渡动画的位置，那么起始状态的位置就是原点（0,0），结束状态的位置就是终点（1,1）（
-                        但是以我们demo为例子，结束状态的x轴没有发生偏移，所以以这种模式去设置percentX是没有效果的）；
-                        3.pathRelative:坐标系选择参照整个运动路径，即起始和终点的直线距离构成X轴，此时y轴就有正负之分，表示在X轴的左边还是右边。x轴和y轴的长度都是等于路径的长度。
+                        1.parentRelative：坐标系基于motionTarget指向的控件的父视图。（demo里面的父视图是全局，
+                          所以坐标系原点在屏幕的左上角）；
+                        2.deltaRelative：坐标系选择参照整个过渡动画的位置，那么起始状态的位置就是原点（0,0），
+                          结束状态的位置就是终点（1,1）（但是以我们demo为例子，结束状态的x轴没有发生偏移，所以
+                          以这种模式去设置percentX是没有效果的）；
+                        3.pathRelative:坐标系选择参照整个运动路径，即起始和终点的直线距离构成X轴，此时y轴就有正
+                        负之分，表示在X轴的左边还是右边。x轴和y轴的长度都是等于路径的长度。
 
+        percentWidth和percentHeight属性表示视图自身大小，如果整个动画过程中，视图大小不存在变化，是没有效果的。
+        将正方形在起始状态和结束状态的大小改为不一致，就可以看到效果，percentWidth和percentHeight属性会导致
+        sizePercent属性失效。
          -->
         <KeyFrameSet>
             <KeyPosition
@@ -102,6 +109,60 @@
                 app:motionTarget="@id/view1"
                 app:percentX="0.75"
                 app:percentY="0.75" />
+
+            <!--            <KeyPosition-->
+            <!--                app:framePosition="90"-->
+            <!--                app:motionTarget="@id/view2"-->
+            <!--                app:percentHeight="1"-->
+            <!--                app:percentWidth="0" />-->
+
+            <!--            <KeyAttribute-->
+            <!--                android:rotation="90"-->
+            <!--                app:framePosition="50"-->
+            <!--                app:motionTarget="@id/view2" />-->
+
+            <!--            <KeyAttribute-->
+            <!--                android:rotationX="90"-->
+            <!--                app:framePosition="50"-->
+            <!--                app:motionTarget="@id/view2" />-->
+
+            <!--            <KeyAttribute-->
+            <!--                android:rotationY="90"-->
+            <!--                app:framePosition="50"-->
+            <!--                app:motionTarget="@id/view2" />-->
+
+            <!--            <KeyAttribute-->
+            <!--                android:alpha="0"-->
+            <!--                app:framePosition="50"-->
+            <!--                app:motionTarget="@id/view2" />-->
+
+            <!--            <KeyAttribute-->
+            <!--                android:scaleX="0"-->
+            <!--                app:framePosition="50"-->
+            <!--                app:motionTarget="@id/view2" />-->
+
+            <!--            <KeyAttribute-->
+            <!--                android:scaleY="0"-->
+            <!--                app:framePosition="50"-->
+            <!--                app:motionTarget="@id/view2" />-->
+
+
+<!--            <KeyAttribute-->
+<!--                android:translationX="90dp"-->
+<!--                app:framePosition="50"-->
+<!--                app:motionTarget="@id/view2" />-->
+
+<!--            <KeyAttribute-->
+<!--                android:translationY="90dp"-->
+<!--                app:framePosition="50"-->
+<!--                app:motionTarget="@id/view2" />-->
+
+<!--            <KeyAttribute-->
+<!--                android:translationZ="90dp"-->
+<!--                app:framePosition="50"-->
+<!--                app:motionTarget="@id/view2" />-->
+
+
         </KeyFrameSet>
 
     </Transition>
