--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <!-- 无状态栏 -->
         <item name="android:windowFullscreen">true</item>
         <!-- 启动程序会启动一个空白窗口，设置和闪屏页一样的图片，这样视觉上就能顺畅的过度到闪屏页 -->
-        <item name="android:windowBackground">@drawable/ic_launcher_background</item>
+        <item name="android:windowBackground">@color/color00574B</item>
     </style>
 
 </resources>
