--- a/app/src/main/res/layout/activity_databinding.xml
+++ b/app/src/main/res/layout/activity_databinding.xml
@@ -15,6 +15,10 @@
             name="vm_str"
             type="String" />
 
+        <variable
+            name="plain_user"
+            type="com.zkp.breath.component.activity.jetpack.DataBindingActivity.PlainUser" />
+
         <!-- 引入工具类，但是不推荐在xml使用工具方法的做法，数据的所有操作应该在外层进行，避免造成xml冗余 -->
         <import type="com.blankj.utilcode.util.StringUtils" />
 
@@ -25,6 +29,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_plain_user"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:gravity="center"
+            android:text="@{plain_user.lastName}" />
 
         <TextView
             android:id="@+id/tv_str"
@@ -45,7 +56,7 @@
             android:id="@+id/btn"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:onClick="@{vm::onClickAdd}"
+            android:onClick="@{vm.onClickAdd}"
             android:text="点击+1" />
     </LinearLayout>
 
