--- a/app/src/main/res/layout/activity_debug.xml
+++ b/app/src/main/res/layout/activity_debug.xml
@@ -5,14 +5,24 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/tv_click"
+        android:id="@+id/tv_debug"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="click"
+        android:text="依赖断点的前置断点"
         android:textColor="@color/colorFFFFFF"
         android:textSize="22sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_exception_debug"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="异常断点"
+        android:textColor="@color/colorFFFFFF"
+        android:textSize="22sp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -20,6 +30,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_click" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_debug" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
