--- a/app/src/main/res/layout/activity_iv_scale_type.xml
+++ b/app/src/main/res/layout/activity_iv_scale_type.xml
@@ -5,13 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iv"
+    <FrameLayout
+        android:id="@+id/flt_iv"
         android:layout_width="match_parent"
         android:layout_height="360dp"
         android:layout_marginTop="50dp"
-        android:background="@color/colorFFFFFF"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="@color/color000000"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="match_parent"
+            android:layout_height="360dp"
+            android:layout_gravity="center"
+            android:background="@color/colorFFFFFF" />
+
+    </FrameLayout>
+
 
     <TextView
         android:id="@+id/tv_info"
@@ -23,11 +33,11 @@
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv"
+        app:layout_constraintTop_toBottomOf="@id/flt_iv"
         tools:text="info" />
 
     <TextView
-        android:id="@+id/tv_scale"
+        android:id="@+id/tv_wh_scale"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -50,7 +60,7 @@
         android:text="scaleType属性"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/tv_scale"
+        app:layout_constraintLeft_toRightOf="@id/tv_wh_scale"
         app:layout_constraintRight_toRightOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
