--- a/app/src/main/res/layout/activity_iv_scale_type.xml
+++ b/app/src/main/res/layout/activity_iv_scale_type.xml
@@ -62,7 +62,7 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/tv_wh_scale"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toLeftOf="@id/tv_pic" />
 
     <TextView
         android:id="@+id/tv_pic"
@@ -74,7 +74,7 @@
         android:text="图片比例选择"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/tv_wh_scale"
+        app:layout_constraintLeft_toRightOf="@id/tv_scale_type"
         app:layout_constraintRight_toRightOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
