--- a/app/src/main/res/layout/activity_iv_scale_type.xml
+++ b/app/src/main/res/layout/activity_iv_scale_type.xml
@@ -24,18 +24,26 @@
     </FrameLayout>
 
 
-    <TextView
-        android:id="@+id/tv_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="15dp"
-        android:textSize="20sp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@id/tv_wh_scale"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/flt_iv"
-        tools:text="info" />
+        app:layout_constraintTop_toBottomOf="@id/flt_iv">
+
+        <TextView
+            android:id="@+id/tv_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            tools:text="info" />
+
+    </ScrollView>
 
     <TextView
         android:id="@+id/tv_wh_scale"
