--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="color3F51B5">#3F51B5</color>
     <color name="colorFFFFFF">#FFFFFF</color>
     <color name="color000000">#000000</color>
+    <color name="colorFF5722">#FFFF5722</color>
 </resources>
