--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,10 @@
         <item name="android:windowBackground">@color/color00574B</item>
     </style>
 
+    <!-- 自定义的SwitchCompat的-->
+    <style name="SwitchText" parent="Theme.AppCompat.Light">
+        <item name="android:textColor">#0d09f1</item>
+        <item name="android:textSize">8sp</item>
+    </style>
+
 </resources>
