--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="添加"
-        android:textColor="@color/colorFFFFFF"
+        android:textColor="@color/colorFFFFFFFF"
         android:textSize="22sp"
         android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="查询"
-        android:textColor="@color/colorFFFFFF"
+        android:textColor="@color/colorFFFFFFFF"
         android:textSize="22sp"
         app:layout_constraintLeft_toRightOf="@id/tv_add"
         app:layout_constraintRight_toLeftOf="@id/tv_update"
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="修改"
-        android:textColor="@color/colorFFFFFF"
+        android:textColor="@color/colorFFFFFFFF"
         android:textSize="22sp"
         app:layout_constraintLeft_toRightOf="@id/tv_query"
         app:layout_constraintRight_toLeftOf="@id/tv_delete"
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="删除"
-        android:textColor="@color/colorFFFFFF"
+        android:textColor="@color/colorFFFFFFFF"
         android:textSize="22sp"
         app:layout_constraintLeft_toRightOf="@id/tv_update"
         app:layout_constraintRight_toRightOf="parent"
