--- a/app/src/main/res/layout/adpter_debug.xml
+++ b/app/src/main/res/layout/adpter_debug.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:textColor="@color/colorFFFFFF"
+        android:textColor="@color/colorFFFFFFFF"
         android:textSize="18sp" />
 
 </RelativeLayout>
