--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color3F51B5"
+    android:background="@color/colorFF3F51B5"
     tools:context=".MainActivity">
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
