--- a/app/src/main/res/layout/adapter_student.xml
+++ b/app/src/main/res/layout/adapter_student.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:textColor="@color/color000000"
+        android:textColor="@color/colorFF000000"
         android:textSize="18sp" />
 
 </androidx.cardview.widget.CardView>
