--- a/app/src/main/res/layout/adpter_entrance.xml
+++ b/app/src/main/res/layout/adpter_entrance.xml
@@ -8,7 +8,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/color008577"
+        app:cardBackgroundColor="@color/colorFF008577"
         app:cardCornerRadius="6dp"
         app:cardElevation="0dp" />
 
