--- a/app/src/main/res/layout/activity_switch.xml
+++ b/app/src/main/res/layout/activity_switch.xml
@@ -35,15 +35,25 @@
 
     <!--
         kswFadeBack：从开到关或者关到开，back会有一个透明度渐变。默认关闭
+        kswThumbRangeRatio: track和thumb的宽度比例，通过这个属性修改track的宽度
+        kswThumbMarginBottom，kswThumbMarginTop：数值为负数，可以改变track的高度
+        kswBackColor:track的颜色
+        kswBackRadius:track的圆角度数
+        kswThumbWidth，kswThumbHeight：thumb的宽高
     -->
     <com.kyleduo.switchbutton.SwitchButton
         android:id="@+id/switch_btn"
-        android:layout_width="50dp"
-        android:layout_height="23dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         app:kswBackColor="@color/colorFF008577"
-        app:kswFadeBack="false"
+        app:kswBackRadius="22dp"
         app:kswThumbColor="@color/colorFFFF5722"
+        app:kswThumbHeight="100dp"
+        app:kswThumbMarginBottom="-20dp"
+        app:kswThumbMarginTop="-20dp"
+        app:kswThumbRangeRatio="2"
+        app:kswThumbWidth="100dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/switch_compat" />
