--- a/app/src/main/res/layout/activity_switch.xml
+++ b/app/src/main/res/layout/activity_switch.xml
@@ -18,13 +18,13 @@
         android:id="@+id/switch_compat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
         android:text="SwitchCompat"
         android:textOff="关"
         android:textOn="开"
         android:textSize="20sp"
         android:thumb="@drawable/selector_switch_thumb"
         android:track="@drawable/selector_switch_track"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,7 +34,7 @@
         tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <!--
-        kswFadeBack：从开到关或者关到开，back会有一个透明度渐变。默认关闭
+        kswFadeBack：从开到关或者关到开，back会有一个透明度渐变。默认开启
         kswThumbRangeRatio: track和thumb的宽度比例，通过这个属性修改track的宽度
         kswThumbMarginBottom，kswThumbMarginTop：数值为负数，可以改变track的高度
         kswBackColor:track的颜色
@@ -48,6 +48,7 @@
         android:layout_marginTop="100dp"
         app:kswBackColor="@color/colorFF008577"
         app:kswBackRadius="22dp"
+        app:kswFadeBack="false"
         app:kswThumbColor="@color/colorFFFF5722"
         app:kswThumbHeight="100dp"
         app:kswThumbMarginBottom="-20dp"
@@ -58,6 +59,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/switch_compat" />
 
+    <!--
+
+    -->
     <com.liys.lswitch.LSwitch
         android:id="@+id/lswitch"
         android:layout_width="38dp"
@@ -67,11 +71,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/switch_btn"
-        app:thumb_color_off="@color/colorFFFF5722"
+        app:thumb_color_off="@color/color808844FF"
         app:thumb_color_on="@color/colorFFFF5722"
         app:thumb_height="20dp"
         app:thumb_width="20dp"
-        app:track_color_off="@color/colorFF008577"
+        app:track_color_off="@color/colorFFE8E8E8"
         app:track_color_on="@color/colorFF008577"
         app:track_height="14dp" />
 
